force-app/main/default/objects/DNBoptimizer__DnBAccountMetadata__c/fields/DNBoptimizer__Account__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>D&amp;B Account Metadata</relationshipLabel>
    <relationshipName>DnBAccountMetadata</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>