force-app/main/default/objects/DNBoptimizer__DnBAccountMetadata__c/fields/DNBoptimizer__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__Account_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account_Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>