force-app/main/default/objects/DNBoptimizer__DnBAccountMetadata__c/fields/DNBoptimizer__Parent_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__Parent_DUNS__c</fullName>
    <label>D&amp;B Parent DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>