force-app/main/default/objects/DNBoptimizer__DnBAccountMetadata__c/fields/DNBoptimizer__parent_id__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__parent_id__c</fullName>
    <formula>CASESAFEID(DNBoptimizer__Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent_Id</label>
    <type>Text</type>
</CustomField>