force-app/main/default/objects/DNBoptimizer__DnBAccountMetadata__c/fields/DNBoptimizer__reparented__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__reparented__c</fullName>
    <formula>DNBoptimizer__parent_id__c  &lt;&gt; DNBoptimizer__Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reparented</label>
    <type>Checkbox</type>
</CustomField>